--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
     <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Newton's Craddle</title>
+      <title>Newton's Cradle</title>
       <style> body {padding: 0; margin: 0;} </style>
       <center>
-      <h1><font face = "Algerian"> Newton's Craddle simulation </font></h1>
+      <h1><font face = "Algerian"> Newton's Cradle simulation </font></h1>
       </center>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
